--- a/src/index.css
+++ b/src/index.css
@@ -225,7 +225,7 @@ body {
   font-style: 400;
   color: #333;
   font-size: 16px;
-  background-color: #26c6da;
+  background-color: #26c6da66;
 }
 h1,
 h2,
