--- a/src/index.css
+++ b/src/index.css
@@ -997,6 +997,20 @@ a:focus {
   max-width: 100%;
 }
 
-main > div > p {
-  border: 1px solid red;
+#root {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+main {
+  min-width: 65%;
+  background-color: white;
+  box-shadow:
+    0px 1px 5px 0px rgba(0, 0, 0, 0.2),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.12);
+  padding: 20px;
 }
