--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import '../node_modules/draft-js/dist/Draft.css';
+
 /* Reset.less
  * Props to Eric Meyer (meyerweb.com) for his CSS reset file. We're using an adapted version here that cuts out some of
    the reset HTML elements we will never need here (i.e., dfn, samp, etc).
