--- a/src/index.css
+++ b/src/index.css
@@ -1007,8 +1007,8 @@ a:focus {
   align-items: center;
 }
 
-main {
-  min-width: 65%;
+#root > :first-child {
+  width: 65%;
   background-color: white;
   box-shadow:
     0px 1px 5px 0px rgba(0, 0, 0, 0.2),
