--- a/.storybook/index.css
+++ b/.storybook/index.css
@@ -1,4 +1,4 @@
-@import '../../../node_modules/draft-js/dist/Draft.css';
+@import '../node_modules/draft-js/dist/Draft.css';
 
 /* Reset.less
  * Props to Eric Meyer (meyerweb.com) for his CSS reset file. We're using an adapted version here that cuts out some of
