--- a/.storybook/index.css
+++ b/.storybook/index.css
@@ -227,7 +227,8 @@ body {
   font-style: 400;
   color: #333;
   font-size: 16px;
-  background-color: #26c6da66;
+  background-color: white;
+  padding: 2em;
 }
 h1,
 h2,
